force-app/main/default/objects/DocumentsContractuels__c/DocumentsContractuels__c.object-meta.xml
<CustomObject>
    <label>Documents contractuels</label>
    <nameField>
        <label>Nom du Document Contractuel</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents contractuels</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>