force-app/main/default/objects/DocumentsContractuels__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Donn_es_Administratives</relationshipName>
    <type>Lookup</type>
</CustomField>