force-app/main/default/objects/DocumentsContractuels__c/fields/ContratDassistanceTechnique__c.field-meta.xml
<CustomField>
    <fullName>ContratDassistanceTechnique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat d&apos;assistance technique</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Compte__c</field>
            <operation>equals</operation>
            <valueField>ServiceContract.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Documents contractuels</relationshipLabel>
    <relationshipName>Donn_es_Administratives</relationshipName>
    <type>Lookup</type>
</CustomField>