force-app/main/default/objects/DocumentsContractuels__c/fields/URLDeConsultation__c.field-meta.xml
<CustomField>
    <fullName>URLDeConsultation__c</fullName>
    <label>URL de consultation</label>
    <type>Url</type>
</CustomField>