force-app/main/default/objects/DocumentsContractuels__c/listViews/TousLesDonneesAdministratives.listView-meta.xml
<ListView>
    <fullName>TousLesDonneesAdministratives</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les données administratives</label>
</ListView>